Fix spacing in search widget column

--- a/resources/css/hoax.css
+++ b/resources/css/hoax.css
@@ -96,6 +96,11 @@ Advanced search
 #advanced-search {
     display: flex;
 } 
+#search-widgets > form {
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+}
 #advanced-search h2 {
     text-align: center;
 }
